# -JH-09-02-Lily-media.ai-

./: .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  ACCOUNT_SETUP_GUIDE.md  AGENT_1_HANDOFF_REPORT.md  Agent Coordination Guide.md  Audit.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CODEX_HANDOFF_AUDIT_FIXES.md  COMPLETE_TECHNICAL_HANDOFF.md  CONTRIBUTING.md  DATABASE_SCHEMA_ANALYSIS_REPORT.md  DATA_RETENTION_POLICY.md  DEPLOYMENT_INFRASTRUCTURE_FIXES.md  DOMAIN_QUICK_START.md  Dockerfile  ENCRYPTION_KEY_ROTATION.md  ENVIRONMENT_SETUP.md  FUNCTIONALITY_FIXES_HANDOFF.md  GA_CHECKLIST_HANDOFF_REPORT.md  GA_HANDOFF_REPORT.md  KEY_ROTATION_PROCEDURES.md  MIGRATION_FIX_PLAN.md  MONITORING.md  Makefile  OAUTH_PLATFORM_SETUP.md  P0-13B-COMPLETION-REPORT.md  P1-10b_Trial_Disclosure_Implementation_Report.md  P1-10c_WCAG_Accessibility_Implementation_Report.md  P1-1A-ORGANIZATION-FILTERING-REMEDIATION-PLAN.md  P1-5a_Migration_Status_Report.md  P1-5c_Validation_Report.md  PRESSURE_WASHING_TODO.md  PRODUCTION_HANDOFF_REPORT.md  Prompts.md  QUICK_START.md  README.md  (+70 more)
backend/: app_complete.py  main.py  main_minimal.py  pyproject.toml  requirements.txt
backend/agents/: tools.py
backend/api/: _registry.py  admin.py  ai_suggestions.py  auth.py  auth_management.py  auth_open.py  autonomous.py  billing.py  business_analytics.py  content.py  content_real.py  content_utils.py  dashboard_metrics.py  data_deletion.py  data_export.py  data_retention.py  deep_research.py  error_taxonomy.py  goals_v2.py  image_streaming.py  integration_services.py  jobs.py  key_rotation.py  leads.py  legal_documents.py  linkedin_oauth.py  metrics_stub.py  monitoring_dashboard.py  monitoring_metrics.py  multi_tenant.py  notifications.py  observability.py  partner_oauth.py  performance.py  plan_aware_images.py  plan_billing.py  plan_management.py  plan_suggestions.py  plans.py  pw_pricing.py  (+14 more)
backend/auth/: admin_auth.py  auth0.py  config_validator.py  dependencies.py  middleware.py  two_factor.py  validators.py
backend/config/: production.py
backend/core/: alerting.py  api_version.py  app_factory.py  audit_logger.py  config.py  constants.py  csrf_protection.py  database_optimizer.py  distributed_security_config.py  distributed_security_middleware.py  dlq.py  embedding_validation.py  env_validator.py  error_handler.py  feature_flags.py  http_client.py  http_migration_helper.py  io_utils.py  logging.py  memory.py  monitoring.py  monitoring_middleware.py  observability.py  observability_middleware.py  pagination.py  performance.py  plan_decorators.py  plan_enforcement.py  runbooks.py  secrets_validator.py  security_middleware.py  security_middleware_factory.py  service_factory.py  simple_vector_search.py  startup_health_gates.py  structured_logging.py  telemetry.py  timezone_utils.py  token_encryption.py  token_encryption_validator.py  (+3 more)
backend/db/: models.py  multi_tenant_models.py  user_credentials.py
backend/docs/: BUSINESS_ANALYTICS_API.md  INBOX_ORG_SCOPING.md  KEY_ROTATION_PROCEDURES.md  PW_SETTINGS_API.md  PW_SETTINGS_RESOLVER.md  PW_WEATHER_API.md
backend/integrations/: connection_health.py  constants.py  instagram_client.py  linkedin_client.py  twitter_client.py
backend/middleware/: content_safety_middleware.py  distributed_auth_middleware.py  error_tracking.py  feature_flag_enforcement.py  global_feature_flag_middleware.py  multi_tenant.py  research_access_control.py  subscription_enforcement.py  (+1 more)
(+370 files in other folders)
